Cleanup code
fixed up some issues with the consistency of some of the commands